k8s-https/ingress-443.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-443
  namespace: 3-tier-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Target Type and Listener Port


    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'

    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:759369180932:certificate/e67a69a5-a8a2-4656-a911-26d4787a4aa5 # Replace with your ACM certificate ARN
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
